Update animation + referal page v19

--- a/css/referal.css
+++ b/css/referal.css
@@ -164,7 +164,7 @@
 
 /* Информационные блоки реферальной системы */
 .referals-card-infos {
-  display: flex;
+  display: none;
   justify-content: center;
   gap: 20px;
   margin-top: -40px;
