--- a/css/styles.css
+++ b/css/styles.css
@@ -3,13 +3,62 @@ body {
     padding: 0;
     background-color: #EDEEF0;
     font-family: 'MiSans', sans-serif;
-    padding-top: 80px; /* Отступ сверху для меню */
-    padding-bottom: 60px; /* Добавляем отступ снизу, чтобы был зазор до футера */
+    padding-top: 80px;
+    /* Отступ сверху для меню */
+    padding-bottom: 60px;
+    /* Добавляем отступ снизу, чтобы был зазор до футера */
 }
 
 html {
     scroll-behavior: smooth;
 }
+
+/* Редирект на ошибки (Не авторизован) /
+
+/* Пользователь не авторизован (user not auth) */
+.not-auth-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    min-height: 10vh;
+    gap: 20px;
+    padding: 280px;
+}
+
+.not-auth-icon {
+    width: 130px;
+    height: 130px;
+}
+
+.not-auth-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.not-auth-title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 12px;
+    color: #333;
+}
+
+.not-auth-button {
+    display: inline-block;
+    padding: 10px 18px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+}
+
+.not-auth:hover {
+    background-color: #0056b3;
+}
+
 
 /* Стиль для футера (Сorpyright) Нижний копирайтер*/
 .footer {
@@ -65,7 +114,34 @@ html {
 /* Мобильные устройства — экраны до 480px */
 @media (max-width: 480px) {
     body {
-        padding-bottom: 150px;  /* Увеличенный отступ футера от верхних элементов */
+        padding-bottom: 150px;
+        /* Увеличенный отступ футера от верхних элементов */
+    }
+
+    /* Пользователь не найден */
+    .not-auth-container {
+        padding: 80px 20px;
+        gap: 16px;
+        min-height: 70vh;
+    }
+
+    .not-auth-ico {
+        width: 110px;
+        height: 110px;
+    }
+
+    .not-auth-text {
+        align-items: flex-start;
+    }
+
+    .not-auth-title {
+        font-size: 18px;
+        margin-bottom: 8px;
+    }
+
+    .not-auth-button {
+        padding: 8px 14px;
+        font-size: 14px;
     }
 
     .footer {
@@ -117,7 +193,8 @@ html {
 /* Планшеты — экраны от 481px до 800px */
 @media (min-width: 481px) and (max-width: 800px) {
     body {
-        padding-bottom: 120px; /* Под футер, немного больше, чем на мобилке */
+        padding-bottom: 120px;
+        /* Под футер, немного больше, чем на мобилке */
     }
 
     .footer {
@@ -161,6 +238,7 @@ html {
     }
 
     .social-platforms {
-        display: none; /* Можно включить, если нужно: display: inline; */
+        display: none;
+        /* Можно включить, если нужно: display: inline; */
     }
 }
