Update animation + referal page v24 fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ html {
         min-height: 70vh;
     }
 
-    .not-auth-ico {
+    .not-auth-icon {
         width: 110px;
         height: 110px;
     }
