Update animation + referal page v25

--- a/css/styles.css
+++ b/css/styles.css
@@ -118,6 +118,8 @@ html {
         /* Увеличенный отступ футера от верхних элементов */
     }
 
+    /* Редиректы при ошибке (Пользователь не авторизован, страница не найдена)*/
+
     /* Пользователь не найден */
     .not-auth-container {
         padding: 80px 20px;
@@ -144,6 +146,7 @@ html {
         font-size: 14px;
     }
 
+    /* Нижний футер (копирайтер) */
     .footer {
         width: 95%;
         padding: 12px 16px;
