--- a/css/themes.css
+++ b/css/themes.css
@@ -88,8 +88,11 @@ body.dark-theme .accordion-item {
 
 /* Others Style */
 body.dark-theme .theme-line {
-    border-top: 1px solid #333333 !important;
-    /* Темно-серая граница, линия (Line) */
+    border-top: 1px solid #333333 !important; /* Темно-серая граница, линия (Line) */
+}
+/* Modal Window Style */
+body.dark-theme .theme-blog-cards {
+    background: #252525;
 }
 
 /* Burger menu settings (Боковое меню, интерактивное) */
