--- a/css/blog.css
+++ b/css/blog.css
@@ -92,6 +92,17 @@
 }
 
 /* Карточка - кнопка (Для добавления публикации в блог) */
+.post-add-card {
+  flex: 0 1 300px;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background: white;
+  font-family: Arial, sans-serif;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
 .add-card {
   display: none;
   align-items: center;
