--- a/css/blog.css
+++ b/css/blog.css
@@ -93,11 +93,6 @@
 }
 
 /* Выпадающее меню карточки поста */
-.post-dropdown-container {
-    position: relative;
-    display: inline-block;
-}
-
 .postdropdown-menu {
     background-color: white;
     border-radius: 8px;
@@ -106,17 +101,8 @@
     position: absolute;
     top: 30px;
     right: 0;
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-5px);
-    transition: opacity 0.25s ease, transform 0.25s ease, visibility 0.25s;
+    display: none;
     z-index: 9;
-}
-
-.post-dropdown-container:hover .postdropdown-menu {
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
 }
 
 .post-dropdown-item {
@@ -125,7 +111,6 @@
     padding: 8px 12px;
     cursor: pointer;
     user-select: none;
-    transition: background-color 0.2s;
 }
 
 .post-dropdown-item:hover {
@@ -143,7 +128,6 @@
     background-color: #ffffffbd;
     border-radius: 360px;
 }
-
 
 /* Карточка - кнопка (Для добавления публикации в блог) */
 .post-add-card {
